tests/error/comptime/check_slice_construction_null2.bz
function test()
{
	(consteval {
		let p: ?*int32 = null;
		let i = 0;
		__builtin_slice_from_ptrs(&i, p);
	});
}
